export const testIds = {
  buttonLogin: 'btnLogin',
  txtPassword: 'txtPassword',
  txtEmail: 'txtEmail',
  revealCycle: 'revealCycle',
  btnEditProfile: 'btnEditProfile',
  switchButton: 'switchBtn',
  toogleReview: 'toogleReview',
  logoutButton: 'logoutBtn',
  SignUp_Screen: {
    scrollView: 'scrollView',
    textInputName: 'txtName',
    textInputEmail: 'txtEmail',
    textInputPhone: 'txtPhone',
    textInputPassword: 'txtPassword',
    textInputConfirmPassword: 'txtConfirmPassword',
    buttonSignUp: 'btnSignUp',
  },
};
